@@ -403,6 +403,16 @@ Usage: #{opt.program_name} [options] [names...]
              "'\%s', the filename will be appended to it.") do |value|
         @webcvs = value
       end
+
+      opt.separator nil
+
+      opt.separator 'Deprecated options - these warn when set'
+
+      opt.separator nil
+
+      opt.on("--inline-source", "-S") do |value|
+        warn "--inline-source will be removed from RDoc on or after August 2009"
+      end
     end
 
     argv.insert(0, *ENV['RDOCOPT'].split) if ENV['RDOCOPT']
